# United-Hacks-V7

./: PRD.md  README.md  vercel.json
freekick-earth/: test_api.py  test_api2.py
freekick-earth/cpp-engine/: CMakeLists.txt
freekick-earth/cpp-engine/src/: bindings.cpp  physics.cpp  physics.hpp
freekick-earth/python-api/: main.py  physics.py  requirements.txt  stadiums.json  weather.py
freekick-earth/ts-frontend/: index.html  package-lock.json  package.json  vite.config.ts
freekick-earth/ts-frontend/src/: App.tsx  api.ts  index.css
freekick-earth/ts-frontend/src/components/: BCPlace.tsx  ControlPanel.tsx  CurveOverlay.tsx  EntranceScreen.tsx  FlyoverScreen.tsx  GoalKeeperScreen.tsx  Grass.tsx  HorizontalAngleOverlay.tsx  MultiplayerWizard.tsx  NPCs.tsx  PitchScene.tsx  PowerOverlay.tsx  ShotTimingOverlay.tsx  SnowOverlay.tsx  SpinOverlay.tsx  SpotifyPlayer.tsx  StadiumBadge.tsx  StadiumOverlay.tsx  StepWizard.tsx  VerticalAngleOverlay.tsx  stadiums3d.tsx
